[package]
name = "jclone"
description = "A command line tool for cloning and organising git repositories"
authors = ["Jacob Walker <jacob@jacobwalker.dev>"]
version = "0.5.0"
edition = "2024"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/jacobwalkr/jclone"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.2"

[dev-dependencies]
rstest = "0.25.0"

[profile.release]
opt-level = "s"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = "s"

[package.metadata.deb]
license-file = ["LICENCE", "0"]
section = "vcs"
depends = "git"
assets = [
    { source = "target/release/jclone", dest = "usr/bin/", mode = "755" }
]

[package.metadata.generate-rpm]
requires = { "git" = "*" }
auto-req = "no"
license = "BSD-3-Clause"
assets = [
    { source = "target/release/jclone", dest = "/usr/bin/jclone", mode = "755" }
]
